<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="G_Odometrie" Id="{62a985c1-1048-48f9-b4ff-2638c03564b6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// positions actuelles du robot
	lrAngle				: LREAL;	// Angle de la position du robot en radians, à l'angle 0, le robot fait face au long côté
	lrAngleDeg			: LREAL;	// Angle de la position du robot en degrés 
	lrPositionX			: LREAL;	// Position en X du robot sur la table (sens 3m)
	lrPositionY			: LREAL;	// Position en Y du robot sur la table (sens 2m)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>